--- a/src/frontend/src/modals/AuthModal.scss
+++ b/src/frontend/src/modals/AuthModal.scss
@@ -5,6 +5,8 @@
 }
 .input {
   color: $white;
+  background-color: #090909;
+  font-size: $font-body-size;
 }
 .submit {
   color: $white;
